# fake-vcf

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: autoblack_pull_request.yml  build.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: api.rst  conf.py  import-reference.rst  index.rst  overview.rst  usage.rst
fake_vcf/: __init__.py  __main__.py  example.py  reference.py  vcf_faker.py  vcf_generator.py  vcf_reference.py
tests/: test_benchmarks.py  test_vcf_cli.py  test_vcf_fake.py  test_vcf_fake_reference.py  test_vcf_validator.py
tests/test_data/: chr1_small.vcf  chr2_small.vcf
tests/test_data/reference/: reference_small.fa
tests/test_data/reference/parquet/: fasta_chr1.parquet  fasta_chr10.parquet  fasta_chr2.parquet  fasta_chr3.parquet  fasta_chr4.parquet  fasta_chr5.parquet  fasta_chr6.parquet  fasta_chr7.parquet  fasta_chr8.parquet  fasta_chr9.parquet  sequence_metadata.json
tests/test_example/: test_hello.py  test_vcf_cli.py  test_vcf_fake.py  test_vcf_validator.py
